quantos/deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quantos
  labels:
    name: quantos
    app: quantos
